                                                         -*- coding: utf-8 -*-
Changes with Apache 2.5.0

  *) mod_http2: reworked synching of session shutdown with worker threads. h2 
     workers now stick to a session until no more reuqquest are tbd, keepalive 
     handling revisited, users report problems with connection close without
     GOAWAY frames. [Stefan Eissing]
  
  *) mod_http2: Fixed several errors when connections are closed in the middle
     of requests, changed H2KeepAliveTimeout defaults to be the same as H2Timeout
     for synchronous MPMs and leave keepalive timeout to async MPMs default.
     [Stefan Eissing]

  *) mod_cache_socache: Fix a possible cached entity body corruption when it
     is received from an origin server in multiple batches and forwarded by
     mod_proxy.  [Yann Ylavic]

  *) mod_http2: Fixed segfault on connection shutdown, callback ran into a semi
     dismantled session. Added support for experimental accept-push-policy draft
     (https://tools.ietf.org/html/draft-ruellan-http-accept-push-policy-00). Clients
     may now influence server pushes by sending accept-push-policy headers.
     [Stefan Eissing]

  *) mod_http2: On async MPMs (event), idle HTTP/2 connections will enter KEEPALIVE
     state and become eligible for MPM cleanup under load. Rewrote connection
     state handling. Defaults for H2KeepAliveTimeout shortened. Cleaned up logging.
     Improved scoreboard updates for http2 master threads.
     [Stefan Eissing]

  *) mod_http2: new r->subprocess_env variables HTTP2 and H2PUSH, set to "on"
     when available for request.
     [Stefan Eissing]

  *) mod_http2: adding new config directives and the implementation behind
     them: H2Timeout, H2KeepAliveTimeout, H2StreamTimeout. Documentation in
     the http2 manual.
     [Stefan Eissing]

  *) mod_http2: when running in async mpm processing, mod_http2 will cease
     processing on idle connections (e.g. no open streams) back to the mpm.